Fixed image visuals

--- a/sabiha.html
+++ b/sabiha.html
@@ -170,14 +170,14 @@
             <div class="image-container" style="display: flex; justify-content: space-between;">  
               <div class="image">
               <figure>
-  		 <img src="img/sabiha/zip1.png" alt="zipf's law for structured audio" width="70%" height="auto" style="border: 2px solid black;">
+  		 <img src="img/sabiha/zip1.png" alt="zipf's law for structured audio" class="figure-image">
   		 <figcaption><strong> Figure 2: Zipf's Law Distribution:for Structured Audio</strong></figcaption>
               </figure>
               </div>
               
               <div class="image">
               <figure>
-  		 <img src="img/sabiha/zip2.png" alt="zipf's law for unstructured audio" width="70%" height="auto" style="border: 2px solid black;">
+  		 <img src="img/sabiha/zip2.png" alt="zipf's law for unstructured audio" class="figure-image">
   		 <figcaption><strong> Figure 3: Zipf's Law Distributionfor Untructured Audio</strong> </figcaption>
               </figure>
               </div>
@@ -188,7 +188,7 @@
           <div class="image-container" style="display: flex; justify-content: center;">
               <div class="image">
               <figure>
-  		 <img src="img/sabiha/stats.png" alt="Dataset statistics for the 2 sub-corpora" width="70%" height="auto" style="border: 2px solid black;">
+  		 <img src="img/sabiha/stats.png" alt="Dataset statistics for the 2 sub-corpora" class="figure-image">
               </figure>
               </div>  
           </div>
