kristen html done

--- a/kristen.html
+++ b/kristen.html
@@ -139,9 +139,9 @@
               <p>Word Error Rate (WER) and Levenshtein distance (LD) were used to evaluate the accuracy of the transcriptions.
               </p>
               <h5>Word Error Rate</h5>
-              <p><br>\[ \text{WER} = \frac{\text{substitutions} + \text{deletions} + \text{insertions}}{\text{total number of words}} \] </p>
+              <p>The Word Error Rate (WER) measures the accuracy of a speech recognition system by calculating errors in word substitution, deletion, or insertion, divided by the total words in the correct sentence.<br>\[ \text{WER} = \frac{\text{substitutions} + \text{deletions} + \text{insertions}}{\text{total number of words}} \] </p>
                <h5>Levenshtein Distance</h5> 
-               <p>\[ \text{LD} = \text{substitutions} + \text{deletions} + \text{insertions} \]</p>
+               <p>The Levenshtein distance measures the number of changes required to make one word sequence match another, and in the project, it was applied at both word and character levels. <br>\[ \text{LD} = \text{substitutions} + \text{deletions} + \text{insertions} \]</p>
 
                <h4>Experimental Setup</h4>
                <ul>
