finalised- ready for submission

--- a/fardoza.html
+++ b/fardoza.html
@@ -106,7 +106,7 @@
 <section id="methodology" class="methodology">
   <div class="container">
       <div class="methodology-description">
-          <h2>Methodology</h2>
+          <h2>Methods</h2>
   
           <h4>1. Evaluation Metrics</h4>
           <h5>Word Error Rate</h5>
